--- a/Spring/restAndJPA/src/main/resources/application.properties
+++ b/Spring/restAndJPA/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+#This is to evitate show stacktracke errors to users but are necessary for development
+server.error.include-message=never
+server.error.include-stacktrace=never
